@@ -33,7 +33,7 @@ $;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
 
 ;Distributed options
 $;GROUP_COUNT$; = 150
-$;NODISTRIB$; = 0
+$;NODISTRIB$; = 1
 
 ;the following keys are replaced at runtime by the invocation script
 $;COMPONENT_CONFIG$; =
