@@ -1,5 +1,6 @@
 next
 ----
+-tag_data: updated to make use of vappio add-config-metadata-to-tag metric
 -core_qiime component uses a new flag (-f) which overwrites it's working directory
 -added key=value feature to tag_data.pl
 -dataprep_dual16S.pl: now has >2400 artificial barcodes for clovr16S analysis
